<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/task_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/task_name"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_name_view"
                android:text="@string/task_name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_status_view"
                android:layout_below="@+id/task_name"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/task_status"/>

            <RadioGroup
                android:id="@+id/task_status_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/task_status_view"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp">

                <RadioButton
                    android:id="@+id/task_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/task_new" />

                <RadioButton
                    android:id="@+id/task_in_progress"
                    android:layout_width="254dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/in_progress_task_status" />

                <RadioButton
                    android:id="@+id/task_done"
                    android:layout_width="254dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/done_task_status" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_priority_view"
                android:layout_below="@+id/task_status_radio_group"
                android:layout_marginLeft="25dp"
                android:text="@string/task_priority"/>

            <RadioGroup
                android:id="@+id/priority_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/task_priority_view"
                android:layout_marginLeft="25dp">

                <RadioButton
                    android:id="@+id/normal_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/hight_priority"
                    android:layout_width="254dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:text="@string/hight" />
            </RadioGroup>

            <TextView
                android:id="@+id/task_desc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priority_radio_group"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/desc_task"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/task_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_task"
                android:layout_marginTop="10dp"
                android:layout_below="@id/task_desc_view"
                android:layout_marginLeft="25dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_edit_task"
                android:text="@string/save_task"
                android:layout_below="@id/task_desc"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_save_edit_task"
                android:layout_marginBottom="10dp"
                android:textColor="@color/color_error"
                android:layout_marginTop="19dp" />

        </RelativeLayout>
    </ScrollView>

</android.widget.RelativeLayout>
